changed the report structure accordingly to the suggestions of todays lecture, verified the correctness of our bibtex entries in the bibliography

--- a/notebooks/04_paper.ipynb
+++ b/notebooks/04_paper.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9150cb01",
    "metadata": {},
    "outputs": [],
@@ -67,28 +67,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "a5e6d2b5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded 5 files -> combined shape: (1270730, 28)\n",
-      "Dropped irrelevant columns -> shape: (1270730, 24)\n",
-      "Filtered to bicycle accidents -> shape: (399284, 24)\n",
-      "Filtered to bicycle accidents in Berlin -> shape: (23537, 24)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# load accidents data\n",
-    "accidents_df = preprocess_accident_data()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "adbd6f42",
    "metadata": {},
@@ -98,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "fb246427",
    "metadata": {},
    "outputs": [
@@ -109,17 +87,21 @@
       "segments_df: (297480, 66)\n",
       "junction_df: (177334, 64)\n",
       "crossings_gdf: (2924, 2)\n",
-      "accidents_df: (23537, 24)\n"
+      "accidents_df: (23535, 30)\n"
      ]
     }
    ],
    "source": [
+    "accidents_df = pd.read_csv(\n",
+    "    \"../data/panel/berlin_bike_accidents.csv\"\n",
+    ")\n",
+    "\n",
     "segments_df = gpd.read_parquet(\n",
     "    \"../data/merged/berlin_bike_accident_strava_risk_core_panel.parquet\"\n",
     ").to_crs(epsg=4326)\n",
     "\n",
     "junction_df = gpd.read_parquet(\n",
-    "    \"../data/merged/berlin_bike_accident_node_panel.parquet\"\n",
+    "    \"../data/panel/berlin_bike_node_exposure_panel.parquet\"\n",
     ").to_crs(epsg=4326)\n",
     "\n",
     "# one geometry per node_id\n",
@@ -139,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "44b1c3cd",
    "metadata": {},
    "outputs": [
@@ -194,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "efdbfa2e",
    "metadata": {},
    "outputs": [],
@@ -227,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "969848e7",
    "metadata": {},
    "outputs": [],
@@ -239,7 +221,7 @@
     "LON_TOL = 4.8e-2\n",
     "\n",
     "YEAR, MONTH = 2021, 6\n",
-    "UJAHR, UMONAT = 2021, 6\n",
+    "year, month = 2021, 6\n",
     "METRIC_EPSG = 32633\n",
     "\n",
     "\n",
@@ -262,7 +244,7 @@
     "        geometry=gpd.points_from_xy(accidents_df[\"XGCSWGS84\"], accidents_df[\"YGCSWGS84\"]),\n",
     "        crs=\"EPSG:4326\",\n",
     "    )\n",
-    "    accidents_m = accidents_gdf.query(\"UJAHR == @UJAHR and UMONAT == @UMONAT\")\n",
+    "    accidents_m = accidents_gdf.query(\"year == @YEAR and month == @MONTH\")\n",
     "\n",
     "    segments_m.plot(\n",
     "    ax=ax,\n",
@@ -502,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "abbf96a7",
    "metadata": {},
    "outputs": [
