--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -1,145 +1,141 @@
 @article{Uijtdewilligen01092024,
-author = {Teun Uijtdewilligen and Mehmet Baran Ulak and Gert Jan Wijlhuizen and Frits Bijleveld and Karst T. Geurs and Atze Dijkstra},
-title = {Examining the crash risk factors associated with cycling by considering spatial and temporal disaggregation of exposure: Findings from four Dutch cities},
-journal = {Journal of Transportation Safety \& Security},
-volume = {16},
-number = {9},
-pages = {945--971},
-year = {2024},
-publisher = {Taylor \& Francis},
-doi = {10.1080/19439962.2023.2273547},
-URL = {https://doi.org/10.1080/19439962.2023.2273547},
-eprint = {https://doi.org/10.1080/19439962.2023.2273547},
+ author = {Teun Uijtdewilligen and Mehmet Baran Ulak and Gert Jan Wijlhuizen and Frits Bijleveld and Karst T. Geurs and Atze Dijkstra},
+ doi = {10.1080/19439962.2023.2273547},
+ eprint = {https://doi.org/10.1080/19439962.2023.2273547},
+ journal = {Journal of Transportation Safety \& Security},
+ number = {9},
+ pages = {945--971},
+ publisher = {Taylor \& Francis},
+ title = {Examining the crash risk factors associated with cycling by considering spatial and temporal disaggregation of exposure: Findings from four Dutch cities},
+ url = {https://doi.org/10.1080/19439962.2023.2273547},
+ volume = {16},
+ year = {2024}
 }
 
-@article{Kaiser_Klein_Kaack_2025, 
-title={From counting stations to city-wide estimates: data-driven bicycle volume extrapolation}, 
-volume={4}, 
-DOI={10.1017/eds.2025.5}, 
-journal={Environmental Data Science}, 
-author={Kaiser, Silke K. and Klein, Nadja and Kaack, Lynn H.}, 
-year={2025}, 
-pages={e13}
+@article{Kaiser_Klein_Kaack_2025,
+ author = {Kaiser, Silke K. and Klein, Nadja and Kaack, Lynn H.},
+ doi = {10.1017/eds.2025.5},
+ journal = {Environmental Data Science},
+ pages = {e13},
+ title = {From counting stations to city-wide estimates: data-driven bicycle volume extrapolation},
+ volume = {4},
+ year = {2025}
 }
 
 @misc{kaiser2025spatiotemporalgraphneuralnetwork,
-      title={Spatio-Temporal Graph Neural Network for Urban Spaces: Interpolating Citywide Traffic Volume}, 
-      author={Silke K. Kaiser and Filipe Rodrigues and Carlos Lima Azevedo and Lynn H. Kaack},
-      year={2025},
-      eprint={2505.06292},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG},
-      url={https://arxiv.org/abs/2505.06292}, 
+ author = {Silke K. Kaiser and Filipe Rodrigues and Carlos Lima Azevedo and Lynn H. Kaack},
+ journal = {ArXiv preprint},
+ title = {Spatio-Temporal Graph Neural Network for Urban Spaces: Interpolating Citywide Traffic Volume},
+ url = {https://arxiv.org/abs/2505.06292},
+ volume = {abs/2505.06292},
+ year = {2025}
 }
 
-@Article{isprs-archives-XLIII-B4-2022-427-2022,
-AUTHOR = {Wage, O. and Bienzeisler, L. and Sester, M.},
-TITLE = {RISK ANALYSIS OF CYCLING ACCIDENTS USING A TRAFFIC DEMAND MODEL},
-JOURNAL = {The International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
-VOLUME = {XLIII-B4-2022},
-YEAR = {2022},
-PAGES = {427--434},
-URL = {https://isprs-archives.copernicus.org/articles/XLIII-B4-2022/427/2022/},
-DOI = {10.5194/isprs-archives-XLIII-B4-2022-427-2022}
+@article{isprs-archives-XLIII-B4-2022-427-2022,
+ author = {Wage, O. and Bienzeisler, L. and Sester, M.},
+ doi = {10.5194/isprs-archives-XLIII-B4-2022-427-2022},
+ journal = {The International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
+ pages = {427--434},
+ title = {RISK ANALYSIS OF CYCLING ACCIDENTS USING A TRAFFIC DEMAND MODEL},
+ url = {https://isprs-archives.copernicus.org/articles/XLIII-B4-2022/427/2022/},
+ volume = {XLIII-B4-2022},
+ year = {2022}
 }
 
-
-@Article{futuretransp1030037,
-AUTHOR = {Medeiros, Rafael Milani and Bojic, Iva and Jammot-Paillet, Quentin},
-TITLE = {Spatiotemporal Variation in Bicycle Road Crashes and Traffic Volume in Berlin: Implications for Future Research, Planning, and Network Design},
-JOURNAL = {Future Transportation},
-VOLUME = {1},
-YEAR = {2021},
-NUMBER = {3},
-PAGES = {686--706},
-URL = {https://www.mdpi.com/2673-7590/1/3/37},
-ISSN = {2673-7590},
-ABSTRACT = {Urban bicycling has been largely marginalized for decades in the global north and south. Despite a renaissance over the last two decades in academic research, political discourse, sustainability activism, and planning, cities often struggle with data quality and quantity. Digitalization has led to more and better data sources, but they still must be validated and compared with findings from conventional travel surveys. With the COVID-19 pandemic, bicycling and associated road facilities expanded, as did road crashes involving bicycles. This study utilized tens of thousands of datapoints sourced by public institutions and digital devices belonging to private companies that have spread across Berlin over the last ten years and are currently ubiquitous. What does an integrated analysis of data from these novel sources reveal for urban bicycling research, planning, and network design? We explored and visualized the relationships and spatiotemporal variations in (i) bicycling volumes and (ii) crashes, unveiling the (iii) distribution of and correlation between datasets and the city’s bikeway network at an unprecedented threshold. The findings can be useful for special interest groups and to guide future urban bicycling research, planning, and network design.},
-DOI = {10.3390/futuretransp1030037}
+@article{futuretransp1030037,
+ abstract = {Urban bicycling has been largely marginalized for decades in the global north and south. Despite a renaissance over the last two decades in academic research, political discourse, sustainability activism, and planning, cities often struggle with data quality and quantity. Digitalization has led to more and better data sources, but they still must be validated and compared with findings from conventional travel surveys. With the COVID-19 pandemic, bicycling and associated road facilities expanded, as did road crashes involving bicycles. This study utilized tens of thousands of datapoints sourced by public institutions and digital devices belonging to private companies that have spread across Berlin over the last ten years and are currently ubiquitous. What does an integrated analysis of data from these novel sources reveal for urban bicycling research, planning, and network design? We explored and visualized the relationships and spatiotemporal variations in (i) bicycling volumes and (ii) crashes, unveiling the (iii) distribution of and correlation between datasets and the city’s bikeway network at an unprecedented threshold. The findings can be useful for special interest groups and to guide future urban bicycling research, planning, and network design.},
+ author = {Medeiros, Rafael Milani and Bojic, Iva and Jammot-Paillet, Quentin},
+ doi = {10.3390/futuretransp1030037},
+ issn = {2673-7590},
+ journal = {Future Transportation},
+ number = {3},
+ pages = {686--706},
+ title = {Spatiotemporal Variation in Bicycle Road Crashes and Traffic Volume in Berlin: Implications for Future Research, Planning, and Network Design},
+ url = {https://www.mdpi.com/2673-7590/1/3/37},
+ volume = {1},
+ year = {2021}
 }
 
 @misc{Unfallatlas2025,
-  title        = {{Unfallatlas}},
-  author       = {{German Federal Statistical Office}},
-  howpublished = {\url{https://unfallatlas.statistikportal.de/}},
-  note         = {Interaktive Kartenanwendung zu Straßenverkehrsunfällen mit Personenschaden in Deutschland},
-  year         = {2025},
-  urldate      = {2025-12-05}
+ author = {{German Federal Statistical Office}},
+ howpublished = {\url{https://unfallatlas.statistikportal.de/}},
+ note = {Interaktive Kartenanwendung zu Straßenverkehrsunfällen mit Personenschaden in Deutschland},
+ title = {{Unfallatlas}},
+ urldate = {2025-12-05},
+ year = {2025}
 }
 
 @dataset{kaiser_2025_15332147,
-  author       = {Kaiser, Silke Kirstin},
-  title        = {Data from: Spatio-Temporal Graph Neural Network
-                   for Urban Spaces: Interpolating Citywide Traffic
-                   Volume
-                  },
-  month        = may,
-  year         = 2025,
-  publisher    = {Zenodo},
-  doi          = {10.5281/zenodo.15332147},
-  url          = {https://doi.org/10.5281/zenodo.15332147},
+ author = {Kaiser, Silke Kirstin},
+ doi = {10.5281/zenodo.15332147},
+ publisher = {Zenodo},
+ title = {Data from: Spatio-Temporal Graph Neural Network
+for Urban Spaces: Interpolating Citywide Traffic
+Volume
+},
+ url = {https://doi.org/10.5281/zenodo.15332147},
+ year = {2025}
 }
 
-
 @article{luecken2018,
-	abstract = {A prominent policy, which has been proposed in many European municipalities over the last years is the promotion of cycling to decrease pollution and to increase public health. One important part of the assessment of this policy is the estimation of the induced change in bicycle crash numbers. Several recent works supported the ideas by reporting that cycling becomes safer if the number of cyclists increases, i.e., there seems to be a safety-in-numbers effect (SiN).},
-	author = {L{\"u}cken, Leonhard},
-	date = {2018/07/03},
-	date-added = {2025-12-05 13:32:30 +0100},
-	date-modified = {2025-12-05 13:32:30 +0100},
-	doi = {10.1186/s12544-018-0305-9},
-	id = {L{\"u}cken2018},
-	isbn = {1866-8887},
-	journal = {European Transport Research Review},
-	number = {2},
-	pages = {33},
-	title = {On the variation of the crash risk with the total number of bicyclists},
-	url = {https://doi.org/10.1186/s12544-018-0305-9},
-	volume = {10},
-	year = {2018},
-	bdsk-url-1 = {https://doi.org/10.1186/s12544-018-0305-9}}
+ abstract = {A prominent policy, which has been proposed in many European municipalities over the last years is the promotion of cycling to decrease pollution and to increase public health. One important part of the assessment of this policy is the estimation of the induced change in bicycle crash numbers. Several recent works supported the ideas by reporting that cycling becomes safer if the number of cyclists increases, i.e., there seems to be a safety-in-numbers effect (SiN).},
+ author = {L{\"u}cken, Leonhard},
+ bdsk-url-1 = {https://doi.org/10.1186/s12544-018-0305-9},
+ date = {2018/07/03},
+ date-added = {2025-12-05 13:32:30 +0100},
+ date-modified = {2025-12-05 13:32:30 +0100},
+ doi = {10.1186/s12544-018-0305-9},
+ id = {L{\"u}cken2018},
+ isbn = {1866-8887},
+ journal = {European Transport Research Review},
+ number = {2},
+ pages = {33},
+ title = {On the variation of the crash risk with the total number of bicyclists},
+ url = {https://doi.org/10.1186/s12544-018-0305-9},
+ volume = {10},
+ year = {2018}
+}
 
 @article{HADDAK20162025,
-title = {Exposure-based Road Traffic Fatality Rates by Mode of Travel in France},
-journal = {Transportation Research Procedia},
-volume = {14},
-pages = {2025-2034},
-year = {2016},
-note = {Transport Research Arena TRA2016},
-issn = {2352-1465},
-doi = {https://doi.org/10.1016/j.trpro.2016.05.170},
-url = {https://www.sciencedirect.com/science/article/pii/S2352146516301715},
-author = {Mohamed Mouloud Haddak},
-keywords = {Road traffic accidents, travel survey, mobility, risk assessment, risk exposure},
+ author = {Mohamed Mouloud Haddak},
+ doi = {https://doi.org/10.1016/j.trpro.2016.05.170},
+ issn = {2352-1465},
+ journal = {Transportation Research Procedia},
+ keywords = {Road traffic accidents, travel survey, mobility, risk assessment, risk exposure},
+ note = {Transport Research Arena TRA2016},
+ pages = {2025-2034},
+ title = {Exposure-based Road Traffic Fatality Rates by Mode of Travel in France},
+ url = {https://www.sciencedirect.com/science/article/pii/S2352146516301715},
+ volume = {14},
+ year = {2016}
 }
 
 @book{ehrgott2005multicriteria,
-  title     = {Multicriteria Optimization},
-  author    = {Ehrgott, Matthias},
-  year      = {2005},
-  publisher = {Springer},
-  address   = {Berlin, Heidelberg},
-  isbn      = {978-3-540-21398-7},
-  series    = {Lecture Notes in Economics and Mathematical Systems},
-  volume    = {491}
+ address = {Berlin, Heidelberg},
+ author = {Ehrgott, Matthias},
+ isbn = {978-3-540-21398-7},
+ publisher = {Springer},
+ series = {Lecture Notes in Economics and Mathematical Systems},
+ title = {Multicriteria Optimization},
+ volume = {491},
+ year = {2005}
 }
 
 @techreport{hakkert2002uses,
-  title={The uses of exposure and risk in road safety studies},
-  author={Hakkert, A Shalom and Braimaister, L and Van Schagen, I},
-  year={2002},
-  institution={SWOV Institute for Road Safety SWOV, Leidschendam}
+ author = {Hakkert, A Shalom and Braimaister, L and Van Schagen, I},
+ institution = {SWOV Institute for Road Safety SWOV, Leidschendam},
+ title = {The uses of exposure and risk in road safety studies},
+ year = {2002}
 }
 
 @article{WANG2020105838,
-title = {Investigating exposure measures and functional forms in urban and suburban intersection safety performance functions using generalized negative binomial - P model},
-journal = {Accident Analysis \& Prevention},
-volume = {148},
-pages = {105838},
-year = {2020},
-issn = {0001-4575},
-doi = {https://doi.org/10.1016/j.aap.2020.105838},
-url = {https://www.sciencedirect.com/science/article/pii/S0001457520316584},
-author = {Kai Wang and Shanshan Zhao and Eric Jackson},
+ author = {Kai Wang and Shanshan Zhao and Eric Jackson},
+ doi = {https://doi.org/10.1016/j.aap.2020.105838},
+ issn = {0001-4575},
+ journal = {Accident Analysis \& Prevention},
+ pages = {105838},
+ title = {Investigating exposure measures and functional forms in urban and suburban intersection safety performance functions using generalized negative binomial - P model},
+ url = {https://www.sciencedirect.com/science/article/pii/S0001457520316584},
+ volume = {148},
+ year = {2020}
 }
-
